[package]
name = "cargo-cacher"
version = "1.2.5"
license = "MIT OR Apache-2.0"
description = "cargo-cacher is a crates.io proxy that will proxy requests made when building a package with Cargo"
authors = ["Chris MacNaughton <chmacnaughton@gmail.com>"]
homepage = "https://github.com/ChrisMacNaughton/cargo-cacher"
repository = "https://github.com/ChrisMacNaughton/cargo-cacher.git"
edition="2018"

[dependencies]
cargo-lock = "6.0.1"
clap = "2.33.3"
iron = "0.6.1"
log = "0.4.14"
logger = "0.4.0"
router = "0.6.0"
rusqlite = "0.25.0"
scoped_threadpool = "0.1.9"
serde = {version="1.0.125", features=["derive"]}
serde_json = "1.0.64"
simple_logger = "1.11.0"
walkdir = "2.3.2"
dirs = "3.0.1"
humantime = "2.1.0"
